2009-02-12  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c: updated documentation.

	* .gitignore: added all the autotools generated stuff plus the
	stuff that gets produced during compile-time.

2009-02-11  Lars Hartmann  <lars (at) chaotika (dot) org>

	* src/liblpxpak.c (lpxpak_indexblob_compile): fixed typo.

2009-02-10  Lars Hartmann  <lars (at) chaotika (dot) org>

	* configure.ac: added check for some headers and functions.
	* src/liblpxpak.c: #include memory.h if existant.
	* src/liblputil.c: #include memory.h if existant.

2009-02-09  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/liblpatom.h: renamed to atom.h
	* include/liblpcommon.h: renamed to common.h
	* include/liblputil.h: renamed to util.h
	* include/liblpxpak.h: renamed to xpak.h


2009-02-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* TODO: updated.

	Migrating tests to Autotools:
	* t/: cleaned up.
	* Makefile.am (SUBDIRS): added t/.
	* configure.ac (AC_CONFIG_FILES): added t/Makefile.
	* t/01_lpatom_parse.c: modified to fit new filenames and to be silent.
	* t/02_lpxpak_parse.c: modified to fit new filenames and to be silent.
	* t/Makefile.am: added.

	Migration to Autotools:
	* include/liblpcommon.h: added header for (BEGIN|END)_C_DECLS
	definitions.
	* include/liblpatom.h: added (BEGIN|END)_C_DECLS macros.
	* include/liblputil.h: added (BEGIN|END)_C_DECLS macros.
	* include/liblpxpak.h: added (BEGIN|END)_C_DECLS macros.
	* lib/liblpatom.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/liblputil.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/liblpxpak.c: added (BEGIN|END)_C_DECLS macros.
	added tests for autoconf Defines.
	* lib/: renamed to src/.
 	* COPYING: added.
	* Makefile.am: added.
	* configure.ac: added.
	* include/Makefile.am: added.
	* src/Makefile.am: added.
	* Makefile: removed.
	* src/Makefile: removed.

2009-02-05  Lars Hartmann  <lars (at) chaotika (dot) org>
