@@ -1,3 +1,10 @@
+2009-02-16  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	* src/liblpxpak.c (LPXPAK_INT_SIZE): added.
+	replaced every occurence of "sizeof(lpxpak_int_t)" with
+	LPXPAK_INT_SIZE.
+	comments++.
+
 2009-02-12  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	* src/liblpxpak.c: updated documentation.
